Import from 1.16.5 branch