@@ -1,5 +1,6 @@
 package fr.eno.craftcreator.utils;
 
+
 import fr.eno.craftcreator.screen.widgets.SimpleListWidget;
 import net.minecraft.core.Registry;
 import net.minecraft.resources.ResourceLocation;
@@ -12,8 +13,8 @@ import net.minecraftforge.registries.ForgeRegistries;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@SuppressWarnings("unchecked")
 public class EntryHelper
 {
     private static final List<ResourceLocation> items = new ArrayList<>();
@@ -41,17 +42,14 @@ public class EntryHelper
 
     public static <T extends Recipe<C>, C extends Container> void init(Level world)
     {
-        if(items.isEmpty())
-            ForgeRegistries.ITEMS.getValues().forEach(item -> items.add(item.getRegistryName()));
+        if(items.isEmpty()) ForgeRegistries.ITEMS.getValues().forEach(item -> items.add(item.getRegistryName()));
 
         if(recipeTypes.isEmpty())
             Registry.RECIPE_TYPE.forEach(irecipetype -> recipeTypes.add(Registry.RECIPE_TYPE.getKey(irecipetype)));
 
-        if(mods.isEmpty())
-            ModList.get().getMods().forEach(mod -> mods.add(mod.getModId()));
+        if(mods.isEmpty()) ModList.get().getMods().forEach(mod -> mods.add(mod.getModId()));
 
-        if(recipeIds.isEmpty())
-            Registry.RECIPE_TYPE.stream().toList().forEach(recipeType ->
+        if(recipeIds.isEmpty()) Registry.RECIPE_TYPE.stream().collect(Collectors.toList()).forEach(recipeType ->
         {
             RecipeType<T> recipeType1 = (RecipeType<T>) recipeType;
             world.getRecipeManager().getAllRecipesFor(recipeType1).forEach(recipe ->
